[gd_scene load_steps=13 format=3 uid="uid://dmdqtndi6rkpv"]

[ext_resource type="Texture2D" uid="uid://byal6h856ynn0" path="res://graphics/titlescreen.png" id="1_8yg3x"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_pqmpq"]
[ext_resource type="PackedScene" uid="uid://b8ww0a1pvgtar" path="res://scenes/game_main.tscn" id="2_tokvt"]
[ext_resource type="FontFile" uid="uid://2ne5fj81qgw" path="res://fonts/pipanganan_web.ttf" id="4_c7in5"]
[ext_resource type="PackedScene" uid="uid://68su2xs0crgu" path="res://scenes/main_menu_comp/button.tscn" id="5_0ggim"]
[ext_resource type="LabelSettings" uid="uid://x0rjm3djm1b8" path="res://scenes/themes/credits_default.tres" id="6_nptu6"]

[sub_resource type="Animation" id="Animation_ga7y3"]
resource_name = "new_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CreditsPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(1192, 74), Vector2(416, 74)]
}

[sub_resource type="Animation" id="Animation_lsejr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CreditsPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1192, 74)]
}

[sub_resource type="Animation" id="Animation_b8sek"]
resource_name = "hide_credits"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CreditsPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Vector2(416, 74), Vector2(1192, 74)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wongc"]
_data = {
"RESET": SubResource("Animation_lsejr"),
"hide_credits": SubResource("Animation_b8sek"),
"show_credits": SubResource("Animation_ga7y3")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iqt58"]
bg_color = Color(0.682353, 0.14902, 0.156863, 1)
border_width_top = 10
border_width_bottom = 10
border_color = Color(0.913725, 0.360784, 0.141176, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ekplp"]
font = ExtResource("4_c7in5")
font_size = 64
font_color = Color(0.882353, 0.560784, 0.129412, 1)
shadow_size = 8
shadow_color = Color(0.65098, 0.117647, 0.129412, 1)
shadow_offset = Vector2(1, 6)

[node name="MainMenu" type="Node"]
script = ExtResource("1_pqmpq")
game_scene = ExtResource("2_tokvt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wongc")
}

[node name="TitleScreen" type="TextureRect" parent="."]
modulate = Color(0.691357, 0.691357, 0.691357, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 69.0
offset_right = 69.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_8yg3x")
expand_mode = 2

[node name="ColorBackground" type="ColorRect" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -324.0
offset_right = 400.0
offset_bottom = 323.0
grow_vertical = 2
color = Color(0.682353, 0.14902, 0.156863, 1)
metadata/_edit_lock_ = true

[node name="ColorBottomStripes" type="ColorRect" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -324.0
offset_right = 400.0
offset_bottom = -222.0
grow_vertical = 2
color = Color(0.913725, 0.360784, 0.141176, 1)
metadata/_edit_lock_ = true

[node name="ColorBottomStripes2" type="ColorRect" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -102.0
offset_right = 400.0
grow_vertical = 0
color = Color(0.913725, 0.360784, 0.141176, 1)
metadata/_edit_lock_ = true

[node name="ColorStripesOrange" type="ColorRect" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -214.0
offset_right = 400.0
offset_bottom = -204.0
grow_vertical = 2
color = Color(0.913725, 0.360784, 0.141176, 1)
metadata/_edit_lock_ = true

[node name="ColorStripesOrange2" type="ColorRect" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -122.0
offset_right = 400.0
offset_bottom = -112.0
grow_vertical = 0
color = Color(0.913725, 0.360784, 0.141176, 1)
metadata/_edit_lock_ = true

[node name="ColorStripesYellow1" type="ColorRect" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -194.0
offset_right = 400.0
offset_bottom = -184.0
grow_vertical = 2
color = Color(0.898039, 0.572549, 0.141176, 1)
metadata/_edit_lock_ = true

[node name="ColorStripesYellow2" type="ColorRect" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -142.0
offset_right = 400.0
offset_bottom = -132.0
grow_vertical = 0
color = Color(0.898039, 0.572549, 0.141176, 1)
metadata/_edit_lock_ = true

[node name="TitleLabel" type="Label" parent="."]
offset_left = 36.0
offset_top = 210.0
offset_right = 362.0
offset_bottom = 252.0
theme_override_colors/font_color = Color(0.881421, 0.559913, 0.129314, 1)
theme_override_colors/font_shadow_color = Color(0.65098, 0.117647, 0.129412, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 6
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = ExtResource("4_c7in5")
theme_override_font_sizes/font_size = 48
text = "Sinig... Ang?"
metadata/_edit_lock_ = true

[node name="SubtitleLabel" type="Label" parent="."]
offset_left = 36.0
offset_top = 186.0
offset_right = 362.0
offset_bottom = 206.0
theme_override_colors/font_color = Color(0.646029, 0.646029, 0.646029, 1)
theme_override_fonts/font = ExtResource("4_c7in5")
theme_override_font_sizes/font_size = 12
text = "ano po yun? Yung..."
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="MainMenuList" type="VBoxContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 60.0
offset_top = -4.0
offset_right = 331.0
offset_bottom = 90.0
grow_vertical = 2
theme_override_constants/separation = 20
metadata/_edit_lock_ = true

[node name="StartGame" parent="MainMenuList" instance=ExtResource("5_0ggim")]
layout_mode = 2
text = "Ambatucook"

[node name="HowToPlay" parent="MainMenuList" instance=ExtResource("5_0ggim")]
layout_mode = 2
text = "Paano to gawin?"

[node name="Credits" parent="MainMenuList" instance=ExtResource("5_0ggim")]
layout_mode = 2
text = "Credits"

[node name="QuitGame" parent="MainMenuList" instance=ExtResource("5_0ggim")]
layout_mode = 2
text = "sige, iwanan mo ko..."

[node name="CreditsPanel" type="Panel" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -250.0
offset_right = 760.0
offset_bottom = 250.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iqt58")

[node name="CreditsLabel" type="Label" parent="CreditsPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -142.0
offset_top = 40.0
offset_right = 142.0
offset_bottom = 95.0
grow_horizontal = 2
text = "CREDITS"
label_settings = SubResource("LabelSettings_ekplp")

[node name="GridContainer" type="GridContainer" parent="CreditsPanel"]
layout_mode = 0
offset_left = 74.0
offset_top = 121.0
offset_right = 665.0
offset_bottom = 469.0
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 20
columns = 2

[node name="GodRay" type="Label" parent="CreditsPanel/GridContainer"]
layout_mode = 2
text = "God Ray Shader"
label_settings = ExtResource("6_nptu6")

[node name="GodRay2" type="Label" parent="CreditsPanel/GridContainer"]
layout_mode = 2
text = "pendoo"
label_settings = ExtResource("6_nptu6")

[node name="Font" type="Label" parent="CreditsPanel/GridContainer"]
layout_mode = 2
text = "Font"
label_settings = ExtResource("6_nptu6")

[node name="Font2" type="Label" parent="CreditsPanel/GridContainer"]
layout_mode = 2
text = "Cid Gonzales"
label_settings = ExtResource("6_nptu6")

[node name="Graphics" type="Label" parent="CreditsPanel/GridContainer"]
layout_mode = 2
text = "Graphics"
label_settings = ExtResource("6_nptu6")

[node name="VBoxContainer2" type="VBoxContainer" parent="CreditsPanel/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="GFX1" type="Label" parent="CreditsPanel/GridContainer/VBoxContainer2"]
layout_mode = 2
text = "HiClipArt"
label_settings = ExtResource("6_nptu6")

[node name="GFX2" type="Label" parent="CreditsPanel/GridContainer/VBoxContainer2"]
layout_mode = 2
text = "Rpg Maker MV Animations"
label_settings = ExtResource("6_nptu6")

[node name="GFX3" type="Label" parent="CreditsPanel/GridContainer/VBoxContainer2"]
layout_mode = 2
text = "RPG Maker RTP"
label_settings = ExtResource("6_nptu6")

[node name="GFX4" type="Label" parent="CreditsPanel/GridContainer/VBoxContainer2"]
layout_mode = 2
text = "TWO Random Spots in UPD"
label_settings = ExtResource("6_nptu6")

[node name="BGM" type="Label" parent="CreditsPanel/GridContainer"]
layout_mode = 2
text = "BGM"
label_settings = ExtResource("6_nptu6")

[node name="BGM2" type="Label" parent="CreditsPanel/GridContainer"]
layout_mode = 2
text = "Cook, Serve, Delicious TWO OST"
label_settings = ExtResource("6_nptu6")

[node name="SFX" type="Label" parent="CreditsPanel/GridContainer"]
layout_mode = 2
text = "SFX"
label_settings = ExtResource("6_nptu6")

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsPanel/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SFX2" type="Label" parent="CreditsPanel/GridContainer/VBoxContainer"]
layout_mode = 2
text = "ZapSplat"
label_settings = ExtResource("6_nptu6")

[node name="SFX3" type="Label" parent="CreditsPanel/GridContainer/VBoxContainer"]
layout_mode = 2
text = "SFX"
label_settings = ExtResource("6_nptu6")

[node name="SFX4" type="Label" parent="CreditsPanel/GridContainer/VBoxContainer"]
layout_mode = 2
text = "RPG Maker XP/Ace/MV RTP"
label_settings = ExtResource("6_nptu6")

[node name="Challenge" type="Label" parent="CreditsPanel/GridContainer"]
layout_mode = 2
text = "Bonus Mechanic"
label_settings = ExtResource("6_nptu6")

[node name="Challenge2" type="Label" parent="CreditsPanel/GridContainer"]
layout_mode = 2
text = "Reia"
label_settings = ExtResource("6_nptu6")

[connection signal="pressed" from="MainMenuList/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MainMenuList/HowToPlay" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="MainMenuList/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MainMenuList/QuitGame" to="." method="_on_quit_game_pressed"]
